assets/css/style.css
body {
  padding-top: 50px;
  background-color:#444;
  margin:0;
  padding:0;
  font: 17px/28px Georgia;
  font-family: Lato, 'Helvetica Neue';
  -webkit-font-smoothing: antialiased;
}

.break {
  width:100%;
  height:15px;
  overflow: hidden;
}

/*
* Navigation
*
*/
.form-group input {
  width:100%;
}

#nprogress {
  position: absolute;
  top: 100px;
  z-index: 10000;
}

#header {
  width:100%;
  text-align: center;
}

#header-search {
  margin:auto;
  max-width: 500px;
}

.form-group {
  position: relative;
}

#location-btn {
  position: absolute;
  right: 2px;
  top: 2px;
}

/*
* Map
*
*/
#map-container {
  height:100%;
  width:100%;
  overflow: hidden;
  position: relative;
}

#map {
  height:100%;
  cursor:pointer;
}

.map .container {
  cursor:pointer !important;
}

#map_graphics_layer {
  pointer-events:none;
}

#legend {
  position: absolute;
  z-index: 1000;
  top: 115px;
  right: 10px;
  color: #f8f8f8;
  background: rgba(50,50,50,0.8);
  padding: 5px;
  padding-top: 0px;
  padding-bottom: 9px;
  width: 200px;
  font-size:10pt;
}

#legend label {
  font-size:8pt;
}

#legend input {
  margin-top: 9px;
}

#legend .checkbox {
  margin-top:0px;
}

#legend #by-count-container {
  display:none;
}

#party-dem {
  background:#2171b5;
  height: 10px;
  opacity: 0.8;
  margin-top:10px;
}

#party-gop {
  background:#cb181d;
  height: 10px;
  opacity: 0.8;
  margin-top:10px;
}

#legend h6 {
  padding-top: 8px;
  margin-top: 2px;
}

#legend .color {
  height:2px;
}

#legend #key-code {
  color: #AAA;
  width: 100%;
  text-align: center;
  margin-bottom: 0px;
}

.esriSimpleSliderTL {
  top: 120px;
  left: 20px;
}

.esriSimpleSlider {
  position: absolute;
  text-align: center;
  border: 0px;
  background: #F8f8f8;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.esriSimpleSlider div {
  font-weight: 500;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.esriSimpleSliderVertical .esriSimpleSliderIncrementButton {
  border-bottom: 1px solid #666;
  -webkit-border-radius: 5px 5px 0 0;
  border-radius: 5px 5px 0 0;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}


#hoverinfo {
  position:absolute;
  background: #f8f8f8;
  top:100px;
  left:100px;
  z-index: 500;
  display:none;
  padding:4px;
  font-size: 10pt;
  padding-left: 10px;
  padding-right: 10px;
  line-height: 17px;
  border-radius: 4px;
  opacity: 0.93;
}

#legislators {
  position:absolute;
  bottom:0px;
  height:auto;
  width:100%;
  pointer-events:none;
}

#legislators .container {
  max-width: 830px;
}

.legislator {
  display: none;
  pointer-events:auto;
  z-index: 1000;
}

.legislator-inner {
  background: #E5E5E5;
  min-height: 120px;
  height:auto;
  overflow: hidden;
  padding: 5px;
  margin-left: -12px;
  margin-right: -12px;
  padding-top: 1px;
  border:2px solid #FFF;
  cursor: pointer;
}

.legislator-inner.selected {
  background:#FFF;
}

.legislator-inner-party-border {
  border-bottom: 5px solid #FFF;
};

.legislator-inner:hover {
  cursor: none;
  border: 10px solid #444;
  border-bottom: none;
}


.legislator h5, .legislator h4 {
  margin: 0px;
  margin-left: -15px;
}

.legislator h5 {
  margin-top:4px;
  color:#5C5C5C;
}

.legislator .media-heading {
  margin-left:0px;
  color:#444;
  margin-top:0px;
  font-weight: 600;
  padding-bottom: 10px;
}

.legislator .media {
  margin-top:10px;
}

.media .glyphicon-user{
  display:none;
  font-size:30px;
}

.legislator .media-object {
  box-shadow: 0px 0px 5px 0px #444;
}

/*
* Typeahead
*
*/
.twitter-typeahead {
  width: 100%;
}

.tt-dropdown-menu {
  min-width: 255px;
  margin-top: 2px;
  padding: 5px 0;
  background-color: #fff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0,0,0,0.2);
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
  -moz-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
  margin-left: 10px;
  padding: 0px;
  border-radius: 0px;
}

.tt-suggestion {
  display: block;
  padding: 3px 20px;
}

.tt-suggestion.tt-is-under-cursor {
  color: #fff;
  background:#72616e;
}

.tt-suggestion.tt-is-under-cursor a {
  color: #fff;
}

.tt-suggestion p {
  margin: 0;
}

.tt-hint {
  display:none;
}

/*
* Footer
*
*/
#footer {
  width:100%;
  min-height:200px;
  bottom:0px;
  background-color:#f8f8f8;
  border-top:1px solid #e7e7e7;
}

#congress-seal {
  background: url('../images/us-congress-seal.svg') no-repeat;
  width: 50px;
  height: 50px;
  background-size: 50px 50px;
  position: absolute;
  margin-left: 46%;
  top: -25px;
  box-shadow: 0px 0px 16px 10px #eee;
  border-radius: 100px;
}

#footer-about {
  text-align: center;
  height: 100px;
  border-top: 1px solid #C9C9C9;
  padding-top: 50px;
  position: relative;
  margin: auto;
  width: 100%;
  margin-top: 50px;
}

#member-details {
  display:none;
}

#contact .col-md-6 {
  padding-left:0px;
}

#member-details h5 {
  margin-top:4px;
  color:#AAA;
}

#telephone {
  margin-top: -5px;
}

#last-50 .col-md-3 {
  padding-left:0px;
}

#voting-record {
  display:none;
}

#pie-chart-votes {
  width:100px;
  height:100px;
}

#pie-chart-party-line {
  width:100px;
  height:100px;
}

.pie-text {
  font-size:12px;
  color:#FFF !Important;
}

#committees {
  display:none;
  height:400px;
  overflow: hidden;
  overflow-y:auto;
  -webkit-transition: height 1s;
  -moz-transition: height 1s;
  transition: height 1s;
  margin-top: 20px;
  /*border-bottom: 1px solid #CCC;*/
}

#committees h3 {
  margin-top:0px;
}

#committee-members {
  display:none;
  margin-top: 20px;
}

.committee {
  cursor: pointer;
  border-bottom: dashed 1px #D7D7D7;
  padding-top: 2px;
  padding-bottom: 2px;
}

.committee.selected {
  background: #EEE;  
}

.committee:hover {
  background:#EEE;
}

#committee-members img {
  float:left;
  width:50px;
  margin:10px;
}

.committee-member-photos {
  border:4px solid #F8f8f8;
}

.committee-member-photos-rep {
  border:4px solid #cb181d;
}

.committee-member-photos-dem {
  border:4px solid #2171b5;
}

.committee-member-photos-ind {
  border:4px solid #AAA;
}

.committee-member-photos:hover {
  cursor: pointer;
  border:4px solid #444;
  -webkit-transition: all 1s ease-in-out;
  -moz-transition: all 1s ease-in-out;
  -o-transition: all 1s ease-in-out;
  transition: all 1s ease-in-out;
}


#bills-container {
  display: none;
  overflow: hidden;
  margin-top: 60px;
}

#bills {
  height: 400px;
  overflow: hidden; 
  overflow-y:auto;
}

#bills h5 {
  color:#444;
}

.bill {
  padding-bottom: 5px;
  border-bottom: 1px dashed #CCC;
  overflow: hidden;
  margin-bottom: 10px;
  font-size: 10pt;
}

#bill-date {
  text-overflow:ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.Passed {
  color:#67a966;
}

.Failed {
  color:#d53f27;
}

.contactIcons {
  margin-top: 3px;
}

.icon-homepage {
  background-image: url('../images/icons/icon-home.png');
  height: 16px;
  width: 16px;
  display: inline-block;
  margin-right: 15px;
  cursor: pointer;
}

.icon-homepage:hover {
  background-image: url('../images/icons/icon-home-hover.png');
}

.icon-email {
  background-image: url('../images/icons/icon-email.png');
  height: 16px;
  width: 16px;
  display: inline-block;
  margin-right: 15px;
  cursor: pointer;
}

.icon-email:hover {
  background-image: url('../images/icons/icon-email-hover.png');
}

.icon-twitter {
  background-image: url('../images/icons/icon-twitter.png');
  height: 16px;
  width: 16px;
  display: inline-block;
  margin-right: 15px;
  cursor: pointer;
}

.icon-twitter:hover {
  background-image: url('../images/icons/icon-twitter-hover.png');
}

.icon-facebook {
  background-image: url('../images/icons/icon-facebook.png');
  height: 16px;
  width: 16px;
  display: inline-block;
  margin-right: 15px;
  cursor: pointer;
}

.icon-facebook:hover {
  background-image: url('../images/icons/icon-facebook-hover.png');
}

.icon-youtube {
  background-image: url('../images/icons/icon-youtube.png');
  height: 16px;
  width: 16px;
  display: inline-block;
  margin-right: 15px;
  cursor: pointer;
}

.icon-youtube:hover {
  background-image: url('../images/icons/icon-youtube-hover.png');
}
 
/* LOADER */

.voting-loader {
  margin-top:100px !important; 
  margin-bottom:80px;
}

.loader-help {
  width:100%;
  height:20px;
  text-align: center;
  color:#CCC;
  margin-top:5px !important;
}

@-webkit-keyframes expand {
  0% {
    -webkit-transform: scale(0);
  }

  50% {
    -webkit-transform: scale(1);
  }

  100% {
    z-index: 1;
  }
}
@-moz-keyframes expand {
  0% {
    -moz-transform: scale(0);
  }

  50% {
    -moz-transform: scale(1);
  }

  100% {
    z-index: 1;
  }
}
@-o-keyframes expand {
  0% {
    -o-transform: scale(0);
  }

  50% {
    -o-transform: scale(1);
  }

  100% {
    z-index: 1;
  }
}
@keyframes expand {
  0% {
    transform: scale(0);
  }

  50% {
    transform: scale(1);
  }

  100% {
    z-index: 1;
  }
}
.loader {
  position: absolute;
  left: 50%;
  top: 50%;
  margin: -20px 0 0 -20px;
  background-color: white;
  border-radius: 50%;
  box-shadow: 0 0 0 6.66667px #141414;
  width: 40px;
  height: 40px;
}

.loader:before, .loader:after {
  content: "";
  position: absolute;
  left: 50%;
  top: 50%;
  display: block;
  margin: -21px 0 0 -21px;
  border-radius: 50%;
  z-index: 2;
  width: 42px;
  height: 42px;
}
.loader:before {
  background-color: #141414;
  -webkit-animation: expand 1.6s linear infinite both;
  -moz-animation: expand 1.6s linear infinite both;
  animation: expand 1.6s linear infinite both;
}
.loader:after {
  background-color: white;
  -webkit-animation: expand 1.6s linear 0.8s infinite both;
  -moz-animation: expand 1.6s linear 0.8s infinite both;
  animation: expand 1.6s linear 0.8s infinite both;
}

